--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,42 @@
 /*  your css code here. If applicable */
+*{
+	box-sizing:border-box;
+}
+:root{
+	background-color:rgb(135,206,235);
+}
+p:first-child{
+	background-color:black;
+	color:white;
+}
+p:nth-child(2){
+	color:black;
+}
+p:last-child{
+	color:red;
+}
+li{
+	width:50%;
+	padding:10px;
+	background-color:gray;
+}
+li:nth-child(odd){
+	background:white;
+}
+li:first-child,li:last-child{
+	font-size:22px;
+}
+li:nth-last-child(3){
+	background:pink;
+}
+
+
+
+
+
+
+
+
+
+
+
